--- a/index.html
+++ b/index.html
@@ -6,25 +6,45 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Stats preview card component</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
+
+  <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body>
 
-  Get insights that help your business grow.
+  <div class="card">
+    <div class="text">
+      <div>
+        <h1>Get <span class="accent">insights</span> that help your business grow.</h1>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+          experience, and overall efficiency.</p>
+  
+          <div class="blocks">
+            <article>
+              <h3>10k+</h3>
+              <span>companies</span>
+            </article>
+      
+            <article>
+              <h3>314</h3>
+              <span>templates</span>
+            </article>
+      
+            <article>
+              <h3>12M+</h3>
+              <span>queries</span>
+            </article>
+          </div>
+      </div>
+    </div>
+    <div class="img"></div>
+  </div>
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
