--- a/index.html
+++ b/index.html
@@ -15,8 +15,38 @@
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body>
+  <div class="wrapper">
+    <div class="card">
+      <div class="card__text">
+        <h1 class="card__text-title">Get <span class="card__text-title-accent">insights</span> that help your business grow.</h1>
 
-  <div class="card">
+        <p class="card__text-text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+          experience, and overall efficiency.</p>
+
+        <div class="card__text-desc">
+          <article class="card__text-desc-card">
+            <h3 class="card__text-desc-title">10k+</h3>
+            <span class="card__text-desc-info">companies</span>
+          </article>
+    
+          <article class="card__text-desc-card">
+            <h3 class="card__text-desc-title">314</h3>
+            <span class="card__text-desc-info">templates</span>
+          </article>
+    
+          <article class="card__text-desc-card">
+            <h3 class="card__text-desc-title">12M+</h3>
+            <span class="card__text-desc-info">queries</span>
+          </article>
+        </div>
+      </div>
+      <div class="card__img">
+        <div class="card__img-item"></div>
+      </div>
+    </div>
+  </div>
+
+  <!--<div class="card">
     <div class="text">
       <div>
         <h1>Get <span class="accent">insights</span> that help your business grow.</h1>
@@ -43,11 +73,11 @@
       </div>
     </div>
     <div class="img"></div>
-  </div>
+  </div>-->
   
-  <div class="attribution">
+  <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div>-->
 </body>
 </html>
